# ChangeLog for sci-libs/pynac
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Nov 2010; François Bissey <f.r.bissey@massey.ac.nz>
  pynac-0.2.1.ebuild:
  update SRC_URI

  08 Oct 2010; François Bissey <f.r.bissey@massey.ac.nz>
  pynac-0.2.1.ebuild:
  Resolve conflict, fix manifest.

  08 Oct 2010; François Bissey <f.r.bissey@massey.ac.nz>
  +pynac-0.2.1.ebuild:
  naming and SRC_URI fixes

*pynac-0.2.1 (08 Oct 2010)

  08 Oct 2010; François Bissey <f.r.bissey@massey.ac.nz>
  +pynac-0.2.1.ebuild:
  New version for sage-4.6

  02 Oct 2010; Christopher Schwan <cschwan@students.uni-mainz.de>
  -pynac-0.2.0_p4.ebuild:
  Removed old ebuild

*pynac-0.2.0_p5 (09 Sep 2010)

  09 Sep 2010; Christopher Schwan <cschwan@students.uni-mainz.de>
  +pynac-0.2.0_p5.ebuild:
  Version bump

  08 Sep 2010; François Bissey <f.r.bissey@massey.ac.nz> metadata.xml:
  Fix metadata

  03 Aug 2010; Christopher Schwan <cschwan@students.uni-mainz.de>
  -pynac-0.1.11.ebuild, -pynac-0.1.12.ebuild, -pynac-0.2.0_p3.ebuild:
  Removed old versions

  23 Jul 2010; Christopher Schwan <cschwan@students.uni-mainz.de>
  pynac-0.2.0_p4.ebuild:
  Migrated to autotools-utils.eclass

*pynac-0.2.0_p4 (18 Jul 2010)

  18 Jul 2010; Christopher Schwan <cschwan@students.uni-mainz.de>
  +pynac-0.2.0_p4.ebuild:
  Version bump

*pynac-0.2.0_p3 (05 Jun 2010)

  05 Jun 2010; Christopher Schwan <cschwan@students.uni-mainz.de>
  +pynac-0.2.0_p3.ebuild:
  Version bump

*pynac-0.1.12 (03 May 2010)

  03 May 2010; Christopher Schwan <cschwan@students.uni-mainz.de>
  +pynac-0.1.12.ebuild:
  Version bump

  26 Mar 2010; François Bissey <f.r.bissey@massey.ac.nz>
  pynac-0.1.11.ebuild:
  keywording ~ppc

  20 Mar 2010; Christopher Schwan <cschwan@students.uni-mainz.de>
  pynac-0.1.11.ebuild:
  Removed dependency on sage eclass

  13 Mar 2010; Christopher Schwan <cschwan@students.uni-mainz.de>
  -pynac-0.1.10.ebuild:
  Dropped old version

*pynac-0.1.11 (22 Feb 2010)
