@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/pynac
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*pynac-0.2.1-r1 (08 Jan 2011)
+
+  08 Jan 2011; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
+  +pynac-0.2.1-r1.ebuild:
+  Build pynac for different python ABIs.
 
   01 Nov 2010; François Bissey <f.r.bissey@massey.ac.nz>
   pynac-0.2.1.ebuild:
